notebook handler local ready

--- a/Step_10_Project_Health_Insurance_Cross_Sell.ipynb
+++ b/Step_10_Project_Health_Insurance_Cross_Sell.ipynb
@@ -3949,14 +3949,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "74617ae5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "da651fe2",
    "metadata": {},
@@ -3966,27 +3958,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "5fc870d3",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-12-10T21:37:17.788451Z",
-     "start_time": "2022-12-10T21:37:17.355990Z"
-    }
-   },
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'insurance'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [52]\u001b[0m, in \u001b[0;36m<cell line: 10>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mflask\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Flask, request, Response\n\u001b[1;32m      9\u001b[0m \u001b[38;5;66;03m#collecting the past archive and imnport class\u001b[39;00m\n\u001b[0;32m---> 10\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01minsurance\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mInsurance\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Insurance\n\u001b[1;32m     13\u001b[0m model \u001b[38;5;241m=\u001b[39m xgb\u001b[38;5;241m.\u001b[39mXGBClassifier()\n\u001b[1;32m     15\u001b[0m model\u001b[38;5;241m.\u001b[39mload_model(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/home/guilherme/Documentos/repos/pa_health_cross_sell/projeto/model/model_cross_sell.json\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'insurance'"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "id": "62238686",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import os\n",
     "import pickle\n",
@@ -4073,15 +4048,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "d56d9719",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-15T22:47:01.878998Z",
-     "start_time": "2022-12-15T22:47:00.036905Z"
+     "end_time": "2022-12-16T23:22:19.762404Z",
+     "start_time": "2022-12-16T23:22:19.113589Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>previously_insured</th>\n",
+       "      <th>annual_premium</th>\n",
+       "      <th>vintage</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>age</th>\n",
+       "      <th>region_code</th>\n",
+       "      <th>policy_sales_channel</th>\n",
+       "      <th>driving_license</th>\n",
+       "      <th>vehicle_age</th>\n",
+       "      <th>vehicle_damage</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>23367.0</td>\n",
+       "      <td>249</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>23</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>152.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>&lt; 1 Year</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>13</td>\n",
+       "      <td>1</td>\n",
+       "      <td>31409.0</td>\n",
+       "      <td>221</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>41</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1-2 Year</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>18</td>\n",
+       "      <td>1</td>\n",
+       "      <td>46622.0</td>\n",
+       "      <td>299</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>25</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>152.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>&lt; 1 Year</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>31</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2630.0</td>\n",
+       "      <td>136</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>26</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>160.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>&lt; 1 Year</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>39</td>\n",
+       "      <td>0</td>\n",
+       "      <td>42297.0</td>\n",
+       "      <td>264</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>45</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>124.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1-2 Year</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id  previously_insured  annual_premium  vintage  gender  age  region_code  \\\n",
+       "0   7                   0         23367.0      249    Male   23         11.0   \n",
+       "1  13                   1         31409.0      221  Female   41         15.0   \n",
+       "2  18                   1         46622.0      299  Female   25         35.0   \n",
+       "3  31                   0          2630.0      136  Female   26          8.0   \n",
+       "4  39                   0         42297.0      264    Male   45          8.0   \n",
+       "\n",
+       "   policy_sales_channel  driving_license vehicle_age vehicle_damage  \n",
+       "0                 152.0                1    < 1 Year            Yes  \n",
+       "1                  14.0                1    1-2 Year             No  \n",
+       "2                 152.0                1    < 1 Year             No  \n",
+       "3                 160.0                1    < 1 Year             No  \n",
+       "4                 124.0                1    1-2 Year            Yes  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import json\n",
     "import requests\n",
@@ -4091,17 +4196,19 @@
     "df10 = pd.read_csv('/home/guilherme/Documentos/repos/pa_health_cross_sell/projeto/df_raw.csv')\n",
     "\n",
     "#remove the variable response\n",
-    "df10 = df10.drop(['response'], axis=1)\n"
+    "df10 = df10.drop(['response'], axis=1)\n",
+    "\n",
+    "df10.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "b5180fdf",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-15T22:47:24.690637Z",
-     "start_time": "2022-12-15T22:47:15.233778Z"
+     "end_time": "2022-12-16T23:08:33.492269Z",
+     "start_time": "2022-12-16T23:08:23.550764Z"
     }
    },
    "outputs": [],
@@ -4113,12 +4220,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "3a38a921",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-15T23:48:46.868813Z",
-     "start_time": "2022-12-15T23:48:38.503638Z"
+     "end_time": "2022-12-16T23:08:55.848125Z",
+     "start_time": "2022-12-16T23:08:47.269267Z"
     }
    },
    "outputs": [
@@ -4151,12 +4258,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "f03d9f1e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-15T23:50:41.137507Z",
-     "start_time": "2022-12-15T23:50:32.710467Z"
+     "end_time": "2022-12-16T23:09:16.466517Z",
+     "start_time": "2022-12-16T23:09:08.477790Z"
     }
    },
    "outputs": [],
@@ -4166,12 +4273,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "9ede3cac",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-15T23:54:01.201269Z",
-     "start_time": "2022-12-15T23:54:01.169025Z"
+     "end_time": "2022-12-16T23:09:23.357216Z",
+     "start_time": "2022-12-16T23:09:23.306696Z"
     }
    },
    "outputs": [
@@ -4313,12 +4420,13 @@
        "4               1  0.575415  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Five customers with more probability of acquisition vehicle insurance\n",
     "d1.head()"
    ]
   }
